Add explicit naming with CollectionTable annotation for entity field `Batch.allowedWorkerTypes` and better formatting of entity annotations. Add Column annotation to `User.roleList`.